--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@clerk/clerk-react": "^5.32.0",
+    "@google/generative-ai": "^0.24.1",
     "axios": "^1.10.0",
     "lucide-react": "^0.344.0",
     "react": "^18.3.1",
