--- a/server/package.json
+++ b/server/package.json
@@ -15,6 +15,7 @@
     "cors": "^2.8.5",
     "express": "^5.1.0",
     "mongoose": "^8.16.0",
+    "node-cron": "^4.1.1",
     "socket.io": "^4.8.1"
   }
 }
