--- a/package.json
+++ b/package.json
@@ -12,10 +12,12 @@
   "dependencies": {
     "@clerk/clerk-react": "^5.32.0",
     "@google/generative-ai": "^0.24.1",
+    "@reduxjs/toolkit": "^2.11.0",
     "axios": "^1.10.0",
     "lucide-react": "^0.344.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-redux": "^9.2.0",
     "react-router-dom": "^6.30.1",
     "socket.io-client": "^4.8.1"
   },
