--- a/server/package.json
+++ b/server/package.json
@@ -17,6 +17,7 @@
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
     "mongoose": "^8.16.0",
+    "morgan": "^1.10.1",
     "node-cron": "^4.1.1",
     "react-redux": "^9.2.0",
     "socket.io": "^4.8.1",
