--- a/server/.env
+++ b/server/.env
@@ -1,2 +1,5 @@
 AI_KEY=AIzaSyB3Bm0vcr7Xwjwv6m5lNVPWDVsecCBTIYQ
 ENVIRONMENT=DEVELOPMENT
+CLERK_SECRET_KEY=sk_test_rb95YehIFzMHcyNfWco93kruOQnmy9ZUrr9cznY2fC
+CLERK_PUBLISHABLE_KEY=pk_test_dG91Z2gtb2FyZmlzaC02My5jbGVyay5hY2NvdW50cy5kZXYk
+# CLERK_SIGN_IN_URL=/sign-in
