--- a/server/package.json
+++ b/server/package.json
@@ -11,6 +11,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@clerk/clerk-sdk-node": "^4.13.23",
+    "@clerk/express": "^1.7.58",
     "@google/genai": "^1.6.0",
     "@reduxjs/toolkit": "^2.11.0",
     "cors": "^2.8.5",
